# ReStore

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  KaGen_file-format.patch  k-means.cpp  memoryMappedFileReader.h  microbenchmarks.cpp  mpi_io_wrapper.hpp  non-mpi-microbenchmarks.cpp  pageRank.cpp  pageRankNetworKit.py  probabilisticFailureSimulator.hpp  probabilistic_failure_simulator.hpp  profile-only-on-rank-0.sh  pseudo_random_permutation.cpp  recvSizes.cpp  run_data_loss_simulation.sh  simulate_failures_until_data_loss.cpp
benchmark/include/: k-means.hpp
cmake/: require_out_of_source_builds.cmake
experiments/: BUILDING  common.R  submit-to-limited-queue.sh
experiments/failures-until-data-loss/: failure-probability.csv  failures-until-irrecoverable-data-loss.R  testActualBlockRangeDistribution.py  theoretical-failure-probability.csv  theoreticalDataLossProbability.py
experiments/ft-raxml-empirical-datasets/: aa_rokasA1_48@2.sbatch  aa_rokasA4_40@100.sbatch  aa_rokasA8_48@2.sbatch  check-against-reference-trees.sh  clear-outputs.sh  clear-pagecache.sh  dna_PeteD8_48@5.sbatch  dna_rokasD1_48@10.sbatch  dna_rokasD4_48@4.sbatch  dna_rokasD7_40@100.sbatch  extract-llhs.sh  parse-simulated-minimal-output.sh  plot-ft-raxml-empirical.R  run_with_restore.sh  schedule-all.sh  schedule-minimal.sh  simulated_minimal.sbatch
experiments/ft-raxml-empirical-datasets/data/: rep0.aa_rokasA1.seed0.restore.profiler.csv  rep0.aa_rokasA4.seed0.restore.profiler.csv  rep0.aa_rokasA8.seed0.restore.profiler.csv  rep0.dna_PeteD8.seed0.restore.profiler.csv  rep0.dna_rokasD1.seed0.restore.profiler.csv  rep0.dna_rokasD4.seed0.restore.profiler.csv  rep0.dna_rokasD7.seed0.restore.profiler.csv  rep1.aa_rokasA1.seed0.restore.profiler.csv  rep1.aa_rokasA4.seed0.restore.profiler.csv  rep1.aa_rokasA8.seed0.restore.profiler.csv  rep1.dna_PeteD8.seed0.restore.profiler.csv  rep1.dna_rokasD1.seed0.restore.profiler.csv  rep1.dna_rokasD4.seed0.restore.profiler.csv  rep1.dna_rokasD7.seed0.restore.profiler.csv  rep2.aa_rokasA1.seed0.restore.profiler.csv  rep2.aa_rokasA4.seed0.restore.profiler.csv  rep2.aa_rokasA8.seed0.restore.profiler.csv  rep2.dna_PeteD8.seed0.restore.profiler.csv  rep2.dna_rokasD1.seed0.restore.profiler.csv  rep2.dna_rokasD4.seed0.restore.profiler.csv  rep2.dna_rokasD7.seed0.restore.profiler.csv  rep3.aa_rokasA1.seed0.restore.profiler.csv  rep3.aa_rokasA8.seed0.restore.profiler.csv  rep3.dna_rokasD1.seed0.restore.profiler.csv  rep3.dna_rokasD4.seed0.restore.profiler.csv  rep4.aa_rokasA1.seed0.restore.profiler.csv  rep4.aa_rokasA8.seed0.restore.profiler.csv  rep4.dna_rokasD1.seed0.restore.profiler.csv  rep4.dna_rokasD4.seed0.restore.profiler.csv  rep5.aa_rokasA1.seed0.restore.profiler.csv  rep5.aa_rokasA8.seed0.restore.profiler.csv  rep5.dna_rokasD1.seed0.restore.profiler.csv  rep5.dna_rokasD4.seed0.restore.profiler.csv  (+16 more)
experiments/ft-raxml-simulated-datasets/: SBATCH_AND_SCRIPTS  plot-ft-raxml-simulated.R
experiments/id-compression/: generate-id-compression-plots.R  microbenchmarks-16.csv  microbenchmarks-2.csv  microbenchmarks-32.csv  microbenchmarks-4.csv  microbenchmarks-64.csv  microbenchmarks-8.csv  microbenchmarks-no-compression.csv  microbenchmarks-tuned-compression.csv  microbenchmarks-yes-compression.csv  parse-benchmarks-output.sh  results.csv
experiments/k-means/: k-means-gnu-intelmpi.sbatch  k-means.sbatch  plot-k-means.R  schedule-all.sh
experiments/k-means-overhead/: evaluate-k-means-overhead.R  k-means-bwunicluster.sbatch
experiments/microbenchmarks/: clear-output.sh  collect-measurements.sh  determine-optimal-blocksPerPermutationRange.csv  microbenchmarks-with-an-r-of-1.csv  microbenchmarks.csv  microbenchmarks.sbatch  plot-microbenchmarks.R  schedule-all.sh
experiments/page-rank-overhead/: evaluate-page-rank-overhead.R  parse-out-files.sh
experiments/simulate-failures-until-data-loss/: plot_failure_simulation.R  schedule_simulation.sbatch  simulate-failures-until-data-loss  simulate-failures-until-data-loss.csv  simulate_failures_until_data_loss.csv
include/: core.hpp
include/restore/: block_distribution.hpp  block_retrieval.hpp  block_serialization.hpp  block_submission.hpp  common.hpp  core.hpp  equal_load_balancer.hpp  helpers.hpp  mpi_context.hpp  pseudo_random_permutation.hpp  restore_vector.hpp  timer.hpp  two_phase_commit.hpp
src/: core.h
tests/: CMakeLists.txt  PageRankTestGraph.dimacs  mocks.hpp  mpi_helpers.hpp  mpi_test_wrapper.sh  test_block_distribution.cpp  test_block_retrieval.cpp  test_block_submission.cpp  test_equal_load_balancer.cpp  test_helpers.cpp  test_kmeans_multi_rank.cpp  test_kmeans_single_rank.cpp  test_mpi_context.cpp  test_pseudo_random_permutation.cpp  test_restore.cpp  test_restore_end_to_end_already_serialized_data.cpp  test_serialization.cpp  test_store.cpp  test_two_phase_commit.cpp
tests/benchmarks/: test_kmeans_multi_rank.cpp  test_kmeans_single_rank.cpp
tests/mpi_tests_failures/: test_kmeans_end_to_end_multi_failure.cpp  test_kmeans_end_to_end_single_failure.cpp  test_kmeans_end_to_end_single_failure_2.cpp  test_kmeans_update_centers_throws_on_failure.cpp  test_restore_constructor.cpp  test_restore_end_to_end_asynchronous_submit.cpp  test_restore_end_to_end_complex_data_type.cpp  test_restore_end_to_end_irrecoverable_data_loss.cpp  test_restore_end_to_end_proxy_blocktype.cpp  test_restore_end_to_end_simple1.cpp  test_restore_end_to_end_simple1_pull_blocks.cpp  test_restore_end_to_end_simple1_push_blocks.cpp  test_restore_end_to_end_simple2.cpp  test_restore_end_to_end_simple2_pull_blocks.cpp  test_restore_end_to_end_simple2_push_blocks.cpp  test_restore_end_to_end_single_failure.cpp  test_restore_end_to_end_two_failures.cpp  test_restore_end_to_end_two_failures_pull_blocks.cpp  test_restore_end_to_end_two_failures_push_blocks.cpp  test_restore_vector.cpp  test_with_failures_fixture.cpp  test_with_failures_fixture.hpp
tests/pageRankTestGraph/: pageRankTestGraph_0  pageRankTestGraph_1  pageRankTestGraph_2  pageRankTestGraph_3
(+194 files in other folders)
